--- a/index.html
+++ b/index.html
@@ -51,11 +51,6 @@
       <!-- HERO SECTION -->
       <section class="hero" id="hero">
         <div class="container">
-          <!-- <img
-            src="./images/hero-image.avif"
-            alt="Hero Image"
-            class="hero__image"
-          /> -->
           <h1 class="hero__title">Welcome to Our Landing Page</h1>
           <p class="hero__subtitle">We create solutions for your busines</p>
           <a href="#contact" class="hero__button">Get Started</a>
@@ -110,23 +105,16 @@
               <p class="contact__text">Phone: +123 456 789</p>
               <p class="contact__text">Email: info@example.com</p>
               <p class="contact__text">Address: 123 Main Street, City</p>
-              <ul class="contact__social">
-                <li>
-                  <a href="#" class="contact__social-link">
-                    <i class="fa-brands fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="contact__social-link">
-                    <i class="fa-brands fa-instagram"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="contact__social-link">
-                    <i class="fa-brands fa-x-twitter"></i>
-                  </a>
-                </li>
-              </ul>
+
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2z0J3RjNGOLdCZ0L7RgNC6LCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1734974600191!5m2!1suk!2sua"
+                width="400"
+                height="400"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
             <form
               action="#"
@@ -171,6 +159,23 @@
     <footer class="footer" id="footer">
       <div class="container">
         <p class="footer__text">&copy; 2024 Landing Page Project</p>
+        <ul class="footer__social">
+          <li>
+            <a href="#" class="footer__social-link">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__social-link">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="footer__social-link">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
     <!-- java-script -->
